// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification validation should render error styling correctly 1`] = `
<Well
  className="Notification-giUlLC c-callout--error eWJnxP"
  floating={true}
  type="error"
/>
`;

exports[`Notification validation should render success styling correctly 1`] = `
<Well
  className="Notification-giUlLC c-callout--success eWJnxP"
  floating={true}
  type="success"
/>
`;

exports[`Notification validation should render warning styling correctly 1`] = `
<Well
  className="Notification-giUlLC c-callout--warning eWJnxP"
  floating={true}
  type="warning"
/>
`;
